tests/fixtures/errors/private_in_public.gcl
// Error: pub node references private dim in its type annotation.
dim Velocity = Length / Time;
param kmh: Velocity = 36.0 km/h;
pub node speed: Velocity = @kmh;
